<resources>
    <string name="app_name">Click And Go</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyB18syCE7g0deIfOSLoGylNhUIupXMqvhc</string>
    <string name="title_activity_introduce">IntroduceActivity</string>

    <string name="sign_up">Free Sign Up</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="login">Log in</string>
    <string name="btn_add_new_address">Add new address</string>
    <string name="confirm_email">Confirm</string>
    <string name="account">My Account</string>
    <string name="gender">Gender</string>
    <string name="lastname_go_to_work">Lastname</string>
    <string name="hint_first_name">Firstname</string>
    <string name="hint_lasst_name">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_address">Full address</string>
    <string name="hint_phone">Mobile phone</string>
    <string name="tv_email_confirm">If you forgot your password, we can sent you a new one.</string>
    <string name="tv_new_address">New Address</string>
    <string name="tv_modify_address">Modify address</string>
    <string name="tv_new_credit_card">New credit card</string>
    <string name="btn_save">Save</string>
    <string name="tv_modify_passenger">Modify passenger</string>
    <string name="tv_new_passenger">New passenger</string>
    <string name="btn_update">Update</string>
    <string name="btn_add_passenger">Add Passenger</string>
    <string name="tv_sign_up">By sign up. I agree to Click And Go\'s terms of service.</string>
    <string name="title_activity_go_now_main">GoNowMainActivity</string>
    <string name="btn_confirm_departure">Confirm Departure</string>
    <string name="label_menu">Menu</string>
    <string name="ed_card_number">Credit card number</string>
    <string name="ed_security_code">Security code</string>
    <string name="btn_add_credit_card">Add credit card</string>
    <string name="tv_type">Type</string>
    <string name="tv_lv_star">Go to work</string>
    <string name="tv_version">Click And Go version v1.1.1</string>
    <string name="title_activity_sub_go_now">SubGoNowActivity</string>
    <string name="btn_view_map">View map</string>
    <string name="btn_cancel_all">Cancel all</string>
    <string name="btn_go_now">Go now</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_go_now">Go now</string>
    <string name="tv_select">Select</string>
    <string name="btn_book_for_late">Book for late</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    //*
    <string name="btn_incoming">Incoming</string>
    <string name="btn_view_prices">View prices</string>
    <string name="btn_continue">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_address">Please enter your place</string>
    <string name="btn_log_out">LOG OUT</string>
    <string name="tv_forgot_pass"><u>I forgot my password</u></string>
    <string name="tv_origin">Origin</string>
    <string name="tv_modify">Modify</string>
    <string name="tv_my_acount">My Account</string>
</resources>
