<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:weightSum="10">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/left_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2.5"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:id="@+id/edLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.15"
        android:background="@color/colorButton"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/common_signin_btn_dark_text_focused" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tv_forgot_pass"
        android:textColor="@color/common_signin_btn_dark_text_focused" />

</LinearLayout>
