<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tv_new_passenger"
            android:textColor="@color/common_signin_btn_dark_text_focused"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:text="@string/tv_cancel"
            android:textAllCaps="false"
            android:textColor="@color/common_signin_btn_dark_text_focused" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="60dp"
        android:layout_weight="4"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:weightSum="8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spnGender"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edFirstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:hint="First name"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/edLastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:hint="Last name"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:paddingLeft="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="10">

            <Spinner
                android:id="@+id/spnCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@drawable/border"
                android:hint="@string/hint_phone"
                android:paddingLeft="20dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/colorButton"
        android:text="@string/btn_add_passenger"
        android:textAllCaps="false"
        android:textColor="@color/common_signin_btn_dark_text_focused" />

</LinearLayout>
