<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tv_new_credit_card"
            android:textColor="@color/common_signin_btn_dark_text_focused"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingRight="15dp"
            android:text="@string/tv_cancel"
            android:textColor="@color/common_signin_btn_dark_text_focused"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="60dp"
        android:layout_weight="5"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:id="@+id/edCadNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:hint="@string/ed_card_number"
            android:inputType="number"
            android:nextFocusDown="@+id/edSecurityCode"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:weightSum="10">

            <Spinner
                android:id="@+id/spnDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="20dp" />

            <Spinner
                android:id="@+id/spnMonth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="20dp" />

            <Spinner
                android:id="@+id/spnYear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edSecurityCode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:hint="@string/ed_security_code"
            android:inputType="number"
            android:nextFocusDown="@+id/edt_cardname"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:paddingLeft="20dp"
                android:text="@string/tv_type"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_cardname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:gravity="left|center_vertical"
            android:hint="Credit card name"
            android:nextFocusDown="@+id/btnAddCreditCard"
            android:paddingLeft="20dp"
            android:singleLine="true">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddCreditCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/colorButton"
        android:text="@string/btn_add_credit_card"
        android:textAllCaps="false"
        android:textColor="@color/common_signin_btn_dark_text_focused" />

</LinearLayout>
