<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tv_modify_passenger"
            android:textColor="@color/common_signin_btn_dark_text_focused"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="15dp"
            android:text="Cancel"
            android:textColor="@color/common_signin_btn_dark_text_focused"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="60dp"
        android:layout_weight="3"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:weightSum="6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spnGender"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edFirstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:nextFocusForward="@+id/edLastName"
                android:paddingLeft="20dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edLastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:nextFocusDown="@+id/edEmail"
                android:paddingLeft="20dp"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/edPhone"
            android:paddingLeft="20dp"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/colorButton"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:textColor="@color/common_signin_btn_dark_text_focused" />

</LinearLayout>
